--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^13.6.4",
+    "cypress-xpath": "^2.0.1",
     "mocha": "^10.2.0"
   }
 }
