--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "test",
-    "cypress:open": "cypress open"
+    "cypress:open":"cypress open",
+    "cypress:runChrome": "cypress run -- browser chrome -- spec cypress/integration/test/productSearch.spec.js"
   },
   "keywords": [
     "automation",
@@ -16,6 +17,7 @@
   "license": "ISC",
   "devDependencies": {
     "cypress": "^13.6.4",
+    "cypress-mochawesome-reporter": "^3.8.1",
     "cypress-xpath": "^2.0.1",
     "mocha": "^10.2.0"
   }
